OOIION-1692 Wrap all ShortText's VALUES (which are almost all the field VALUES in the system).  I emphasize VALUES becuase this change does not alter the LABEL's. This specific fix was brought about because the URL's in an instrument's LOCATION more-info panel wwere going off the panel.

--- a/static/css/salt.css
+++ b/static/css/salt.css
@@ -2053,6 +2053,7 @@ a.btn-navigation-plain {
   font-weight:300;
   color:#333;
   letter-spacing: 0px;
+  word-wrap: break-word;
 }
 
 .text-short-value input {
